@@ -1,5 +1,6 @@
 0.08
  - Fix Makefile.PL fails with no '.' in @INC.
+ - Update Module::Install to 1.21 version.
 
 0.07 2016-08-25T11:30:29+02:00
  - Add Dicom::UID::Generator in 0.01 version.
